@@ -20,20 +20,14 @@ import static org.factcast.store.internal.PgConstants.*;
 
 import com.google.common.annotations.VisibleForTesting;
 import java.time.Duration;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import java.util.UUID;
-import java.util.stream.Collectors;
-import lombok.Data;
+import java.util.*;
+import java.util.stream.*;
 import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import net.javacrumbs.shedlock.spring.annotation.SchedulerLock;
 import org.factcast.store.StoreConfigurationProperties;
 import org.factcast.store.internal.PgConstants;
-import org.jetbrains.annotations.Nullable;
-import org.springframework.dao.EmptyResultDataAccessException;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.scheduling.annotation.Scheduled;
 
@@ -43,22 +37,11 @@ public class PGTailIndexManagerImpl implements PGTailIndexManager {
 
   private final JdbcTemplate jdbc;
   private final StoreConfigurationProperties props;
-  private HighWaterMark target = new HighWaterMark();
-
-  @Nullable
-  @Override
-  public UUID targetId() {
-    return target.targetId();
-  }
-
-  @Override
-  public long targetSer() {
-    return target.targetSer();
-  }
 
   @Override
   @Scheduled(cron = "${factcast.store.tailManagementCron:0 0 0 * * *}")
-  // Here we only need to ensure not two tasks are running in parallel until index creation
+  // Here we only need to ensure not two tasks are running in parallel until index
+  // creation
   // was triggered. 5 minutes should be more than enough.
   @SchedulerLock(name = "triggerTailCreation", lockAtMostFor = "5m")
   public void triggerTailCreation() {
@@ -69,28 +52,28 @@ public class PGTailIndexManagerImpl implements PGTailIndexManager {
 
     log.debug("Triggering tail index maintenance");
 
-    var indexesWithValidityFlag = jdbc.queryForList(LIST_FACT_INDEXES_WITH_VALIDATION);
-    var validIndexes = getValidIndices(indexesWithValidityFlag);
+    var indexesOrderedByTimeWithValidityFlag = jdbc.queryForList(LIST_FACT_INDEXES_WITH_VALIDATION);
+    var validIndexes = getValidIndices(indexesOrderedByTimeWithValidityFlag);
     // delete first
     removeOldestValidIndices(validIndexes);
-    removeNonRecentInvalidIndices(indexesWithValidityFlag);
+    removeNonRecentInvalidIndices(indexesOrderedByTimeWithValidityFlag);
 
     // THEN create
-    if (timeToCreateANewTail(validIndexes) && !indexCreationInProgress(indexesWithValidityFlag)) {
+    if (timeToCreateANewTail(validIndexes)
+        && !indexCreationInProgress(indexesOrderedByTimeWithValidityFlag)) {
       createNewTail();
     }
-
-    refreshHighwaterMark();
 
     log.debug("Done with tail index maintenance");
   }
 
   @NonNull
   private List<String> getValidIndices(List<Map<String, Object>> indexesWithValidityFlag) {
-    return indexesWithValidityFlag.stream()
-        .filter(r -> r.get(VALID_COLUMN).equals(IS_VALID))
-        .map(r -> r.get(INDEX_NAME_COLUMN).toString())
-        .collect(Collectors.toList());
+    return new ArrayList<>(
+        indexesWithValidityFlag.stream()
+            .filter(r -> r.get(VALID_COLUMN).equals(IS_VALID))
+            .map(r -> r.get(INDEX_NAME_COLUMN).toString())
+            .toList());
   }
 
   @VisibleForTesting
@@ -121,7 +104,8 @@ public class PGTailIndexManagerImpl implements PGTailIndexManager {
     log.debug("Creating tail index {}.", indexName);
 
     // make sure index creation does not hang forever.
-    // make 5 seconds shorter to compensate for the gap between currentTimeMillis and create index
+    // make 5 seconds shorter to compensate for the gap between currentTimeMillis
+    // and create index
     jdbc.execute(
         PgConstants.setStatementTimeout(props.getTailCreationTimeout().minusSeconds(5).toMillis()));
 
@@ -151,10 +135,11 @@ public class PGTailIndexManagerImpl implements PGTailIndexManager {
     }
   }
 
-  private void removeOldestValidIndices(List<String> validIndexes) {
-    Collections.reverse(validIndexes);
-    while (validIndexes.size() > props.getTailGenerationsToKeep()) {
-      removeIndex(validIndexes.remove(0));
+  @VisibleForTesting
+  protected void removeOldestValidIndices(List<String> validIndexesOrdered) {
+    while (validIndexesOrdered.size() > props.getTailGenerationsToKeep()) {
+      // Oldest is last in list as order is descending by name.
+      removeIndex(validIndexesOrdered.remove(validIndexesOrdered.size() - 1));
     }
   }
 
@@ -201,32 +186,10 @@ public class PGTailIndexManagerImpl implements PGTailIndexManager {
 
     Duration age = Duration.ofMillis(System.currentTimeMillis() - indexTimestamp);
     // use the time after which a hanging index creation would run into a timeout,
-    // plus 5 extra seconds, as the millis are obtained before the index creation is started
+    // plus 5 extra seconds, as the millis are obtained before the index creation is
+    // started
     Duration minAge = props.getTailCreationTimeout();
 
     return minAge.minus(age).isNegative();
-  }
-
-  @VisibleForTesting
-  void refreshHighwaterMark() {
-    try {
-      target =
-          jdbc.queryForObject(
-              PgConstants.HIGHWATER_MARK,
-              (rs, rowNum) -> {
-                HighWaterMark ret = new HighWaterMark();
-                ret.targetId(rs.getObject("targetId", UUID.class));
-                ret.targetSer(rs.getLong("targetSer"));
-                return ret;
-              });
-    } catch (EmptyResultDataAccessException noFactsAtAll) {
-      // ignore
-    }
-  }
-
-  @Data
-  static class HighWaterMark {
-    private UUID targetId = null;
-    private long targetSer = 0;
   }
 }
